Portfolio first draft

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elmira Iskakova Portfolio</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav id="navbar">
@@ -21,19 +23,81 @@
 
     <section id="projects">
       <h2>Some of my recent projects</h2>
-      <div class="project-tile">
-        <a href="#"></a>
+
+      <div class="project-grid">
+        <a
+          href="https://mira-iskakova.github.io/Technical-Documentation-Page/"
+          class="project-tile"
+          target="_blank"
+        >
+          <img
+            src="images/technical_documentation_page.png"
+            alt="technical documentation page project screenshot"
+          />
+          <p>Survey Form</p>
+        </a>
+
+        <a
+          href="https://mira-iskakova.github.io/Product-Landing-Page/"
+          class="project-tile"
+          target="_blank"
+        >
+          <img
+            src="images/product_landing_page.png"
+            alt="product landing page project screenshot"
+          />
+          <p>Product Landing Page</p>
+        </a>
+
+        <a
+          href="https://mira-iskakova.github.io/Survey-Form/"
+          class="project-tile"
+          target="_blank"
+        >
+          <img
+            src="images/survey_form.png"
+            alt="survey form project screenshot"
+          />
+          <p>Survey Form</p>
+        </a>
+
+        <a
+          href="https://mira-iskakova.github.io/Vincent-Van-Gogh-Tribute-Page/"
+          class="project-tile"
+          target="_blank"
+        >
+          <img
+            src="images/tribute_page.png"
+            alt="tribute page project screenshot"
+          />
+          <p>Tribute Page</p>
+        </a>
       </div>
+
+      <button><a href="#"></a>Show all</button>
     </section>
 
     <section id="contact">
-      <a
-        href="https://github.com/Mira-Iskakova?tab=repositories"
-        id="profile-link"
-        target="_blank"
-        >Github</a
-      >
+      <h2>Minding a project? Let's talk!</h2>
+
+      <div class="socials">
+        <a
+          href="https://github.com/Mira-Iskakova?tab=repositories"
+          id="profile-link"
+          target="_blank"
+          >Github</a
+        >
+
+        <a
+          href="https://www.linkedin.com/in/elmira-iskakova/"
+          id="profile-link"
+          target="_blank"
+          >LinkedIn</a
+        >
+      </div>
     </section>
+
+    <footer>&copy 2022 | Created by Elmira Iskakova</footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
