--- a/index.html
+++ b/index.html
@@ -6,99 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elmira Iskakova Portfolio</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- GOOGLE FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav id="navbar">
-      <ul>
-        <li><a href="#welcome-section">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+    <!-- NAVBAR SECTION -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Elmira Iskakova</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <section id="welcome-section">
-      <h1>Hi! I'm Elmira</h1>
-      <p>a front-end developer</p>
-    </section>
-
-    <section id="projects">
-      <h2>Some of my recent projects</h2>
-
-      <div class="project-grid">
-        <a
-          href="https://mira-iskakova.github.io/Technical-Documentation-Page/"
-          class="project-tile"
-          target="_blank"
-        >
-          <img
-            src="images/technical_documentation_page.png"
-            alt="technical documentation page project screenshot"
-          />
-          <p>Survey Form</p>
-        </a>
-
-        <a
-          href="https://mira-iskakova.github.io/Product-Landing-Page/"
-          class="project-tile"
-          target="_blank"
-        >
-          <img
-            src="images/product_landing_page.png"
-            alt="product landing page project screenshot"
-          />
-          <p>Product Landing Page</p>
-        </a>
-
-        <a
-          href="https://mira-iskakova.github.io/Survey-Form/"
-          class="project-tile"
-          target="_blank"
-        >
-          <img
-            src="images/survey_form.png"
-            alt="survey form project screenshot"
-          />
-          <p>Survey Form</p>
-        </a>
-
-        <a
-          href="https://mira-iskakova.github.io/Vincent-Van-Gogh-Tribute-Page/"
-          class="project-tile"
-          target="_blank"
-        >
-          <img
-            src="images/tribute_page.png"
-            alt="tribute page project screenshot"
-          />
-          <p>Tribute Page</p>
-        </a>
-      </div>
-
-      <button><a href="#"></a>Show all</button>
-    </section>
-
-    <section id="contact">
-      <h2>Minding a project? Let's talk!</h2>
-
-      <div class="socials">
-        <a
-          href="https://github.com/Mira-Iskakova?tab=repositories"
-          id="profile-link"
-          target="_blank"
-          >Github</a
-        >
-
-        <a
-          href="https://www.linkedin.com/in/elmira-iskakova/"
-          id="profile-link"
-          target="_blank"
-          >LinkedIn</a
-        >
-      </div>
-    </section>
-
-    <footer>&copy 2022 | Created by Elmira Iskakova</footer>
-
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
