Header section added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         </div>
       </div>
     </nav>
+
+    <!-- HEADER SECTION -->
+    <div class="page-header">
+      <div class="container">
+        <h1>Hi! I'm Elmira.</h1>
+        <p>a frontend developer</p>
+        <button type="button" class="btn btn-light">Lean more</button>
+      </div>
+    </div>
+
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
