--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <!-- navbar section start -->
@@ -47,6 +46,79 @@
       </div>
     </section>
     <!-- home section end -->
+
+    <!-- about section start -->
+    <section class="about" id="about">
+      <div class="max-width">
+        <h2 class="title">About me</h2>
+        <div class="about-content">
+          <div class="column left">
+            <img src="images/computer.png" alt="computer icon" />
+          </div>
+          <div class="column right">
+            <p>
+              Hello there! My name is Elmira and I'm a self-taught frontend
+              developer who is passionate about web development. What thrills me
+              the most about development, is the never ending opportunity to
+              learn and grow. I find it incredibly rewarding being able to build
+              almost anything and unleash the creativity.
+            </p>
+            <a href="#">Download CV</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about section start -->
+
+    <!-- skills section start -->
+    <div class="projects">
+      <h2 class="title">My projects</h2>
+      <div class="container">
+        <div class="panel active">
+          <h3>bla</h3>
+        </div>
+
+        <div class="panel">
+          <h3>bla</h3>
+        </div>
+
+        <div class="panel">
+          <h3>bla</h3>
+        </div>
+      </div>
+    </div>
+
+    <!-- <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="carousel">
+          <div class="card">
+            <div class="box">
+              <img src="images/product_landing_page.png" alt="" />
+              <div class="text">Product Landing Page</div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <img src="images/product_landing_page.png" alt="" />
+              <div class="text">Product Landing Page</div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <img src="images/product_landing_page.png" alt="" />
+              <div class="text">Product Landing Page</div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- skills section end -->
 
     <script src="script.js"></script>
   </body>
