--- a/index.html
+++ b/index.html
@@ -70,9 +70,72 @@
     </section>
     <!-- about section start -->
 
-    <!-- skills section start -->
+    <!-- skills section start-->
+    <div class="skills">
+      <div>
+        <h2 class="title">My skills</h2>
+      </div>
+      <div class="container">
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/html5.png" alt="html5 logo" />
+            </div>
+            <h3>HTML 5</h3>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/css3.png" alt="css3 logo" />
+            </div>
+            <h3>CSS 3</h3>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/javascript.png" alt="javascript logo" />
+            </div>
+            <h3>JavaScript</h3>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/python.png" alt="python logo" />
+            </div>
+            <h3>Python</h3>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/bootstrap.png" alt="bootstrap logo" />
+            </div>
+            <h3>Bootstrap</h3>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <div class="skill-title">
+            <div>
+              <img src="images/git.png" alt="git logo" />
+            </div>
+            <h3>Git</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- skills section end-->
+
+    <!-- projects section start -->
     <div class="projects">
-      <h2 class="title">My projects</h2>
+      <h2 class="title">My latest projects</h2>
       <div class="container">
         <div class="panel active">
           <h3>bla</h3>
@@ -87,38 +150,7 @@
         </div>
       </div>
     </div>
-
-    <!-- <section class="skills" id="skills">
-      <div class="max-width">
-        <h2 class="title">My skills</h2>
-        <div class="carousel">
-          <div class="card">
-            <div class="box">
-              <img src="images/product_landing_page.png" alt="" />
-              <div class="text">Product Landing Page</div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img src="images/product_landing_page.png" alt="" />
-              <div class="text">Product Landing Page</div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <img src="images/product_landing_page.png" alt="" />
-              <div class="text">Product Landing Page</div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- skills section end -->
+    <!-- projects section end -->
 
     <script src="script.js"></script>
   </body>
