--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Elmira Iskakova Portfolio</title>
 
     <link rel="stylesheet" href="styles.css" />
@@ -13,144 +13,148 @@
     ></script>
   </head>
   <body>
-    <!-- navbar section start -->
-    <nav class="navbar">
-      <div class="max-width">
-        <div class="logo">
-          <a href="#">Portfo<span>lio.</span></a>
-        </div>
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About me</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </div>
-    </nav>
-    <!-- navbar section ends -->
-
-    <!-- home section start -->
-    <section class="home" id="home">
-      <div class="max-width">
-        <div class="home-content">
-          <div class="text-1">Hello, my name is</div>
-          <div class="text-2">Elmira</div>
-          <div class="text-3">And I'm a <span>frontend developer</span></div>
-        </div>
-      </div>
-    </section>
-    <!-- home section end -->
-
-    <!-- about section start -->
-    <section class="about" id="about">
-      <div class="max-width">
-        <h2 class="title">About me</h2>
-        <div class="about-content">
-          <div class="column left">
-            <img src="images/computer.png" alt="computer icon" />
+    <div class="container">
+      <!-- navbar section start -->
+      <nav class="navbar">
+        <div class="max-width">
+          <div class="logo">
+            <a href="#">Portfo<span>lio.</span></a>
           </div>
-          <div class="column right">
-            <p>
-              Hello there! My name is Elmira and I'm a self-taught frontend
-              developer who is passionate about web development. What thrills me
-              the most about development, is the never ending opportunity to
-              learn and grow. I find it incredibly rewarding being able to build
-              almost anything and unleash the creativity.
-            </p>
-            <a href="#">Download CV</a>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- about section start -->
+      </nav>
+      <!-- navbar section ends -->
 
-    <!-- skills section start-->
-    <div class="skills">
-      <div>
-        <h2 class="title">My skills</h2>
-      </div>
-      <div class="container">
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/html5.png" alt="html5 logo" />
+      <!-- home section start -->
+      <section class="home" id="home">
+        <div class="max-width">
+          <div class="home-content">
+            <div class="text-1">Hello, my name is</div>
+            <div class="text-2">Elmira</div>
+            <div class="text-3">And I'm a <span>frontend developer</span></div>
+          </div>
+        </div>
+      </section>
+      <!-- home section end -->
+
+      <!-- about section start -->
+      <section class="about" id="about">
+        <div class="max-width">
+          <h2 class="title">About me</h2>
+          <div class="about-content">
+            <div class="column left">
+              <img src="images/computer.png" alt="computer icon" />
             </div>
-            <h3>HTML 5</h3>
-          </div>
-        </div>
-
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/css3.png" alt="css3 logo" />
+            <div class="column right">
+              <p>
+                Hello there! My name is Elmira and I'm a self-taught frontend
+                developer who is passionate about web development. What thrills
+                me the most about development, is the never ending opportunity
+                to learn and grow. I find it incredibly rewarding being able to
+                build almost anything and unleash the creativity.
+              </p>
+              <a href="#">Download CV</a>
             </div>
-            <h3>CSS 3</h3>
           </div>
         </div>
+      </section>
+      <!-- about section start -->
 
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/javascript.png" alt="javascript logo" />
-            </div>
-            <h3>JavaScript</h3>
+      <!-- skills section start-->
+      <section class="skills">
+        <div class="max-width">
+          <div>
+            <h2 class="title">My skills</h2>
           </div>
-        </div>
+          <div class="container">
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/html5.png" alt="html5 logo" />
+                </div>
+                <h3>HTML 5</h3>
+              </div>
+            </div>
 
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/python.png" alt="python logo" />
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/css3.png" alt="css3 logo" />
+                </div>
+                <h3>CSS 3</h3>
+              </div>
             </div>
-            <h3>Python</h3>
-          </div>
-        </div>
 
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/bootstrap.png" alt="bootstrap logo" />
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/javascript.png" alt="javascript logo" />
+                </div>
+                <h3>JavaScript</h3>
+              </div>
             </div>
-            <h3>Bootstrap</h3>
-          </div>
-        </div>
 
-        <div class="skill-box">
-          <div class="skill-title">
-            <div>
-              <img src="images/git.png" alt="git logo" />
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/python.png" alt="python logo" />
+                </div>
+                <h3>Python</h3>
+              </div>
             </div>
-            <h3>Git</h3>
+
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/bootstrap.png" alt="bootstrap logo" />
+                </div>
+                <h3>Bootstrap</h3>
+              </div>
+            </div>
+
+            <div class="skill-box">
+              <div class="skill-title">
+                <div>
+                  <img src="images/git.png" alt="git logo" />
+                </div>
+                <h3>Git</h3>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- skills section end-->
+
+      <!-- projects section start -->
+      <section class="projects">
+        <h2 class="title">My latest projects</h2>
+        <div class="container">
+          <div class="panel active">
+            <h3>bla</h3>
+          </div>
+
+          <div class="panel">
+            <h3>bla</h3>
+          </div>
+
+          <div class="panel">
+            <h3>bla</h3>
+          </div>
+        </div>
+      </section>
+      <!-- projects section end -->
     </div>
-    <!-- skills section end-->
-
-    <!-- projects section start -->
-    <div class="projects">
-      <h2 class="title">My latest projects</h2>
-      <div class="container">
-        <div class="panel active">
-          <h3>bla</h3>
-        </div>
-
-        <div class="panel">
-          <h3>bla</h3>
-        </div>
-
-        <div class="panel">
-          <h3>bla</h3>
-        </div>
-      </div>
-    </div>
-    <!-- projects section end -->
 
     <script src="script.js"></script>
   </body>
