Third version - structure created

--- a/index.html
+++ b/index.html
@@ -3,159 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elmira Iskakova Portfolio</title>
-
-    <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <div class="container">
-      <!-- navbar section start -->
-      <nav class="navbar">
-        <div class="max-width">
-          <div class="logo">
-            <a href="#">Portfo<span>lio.</span></a>
-          </div>
-          <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-          <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-          </div>
-        </div>
+    <header>
+      <h2 class="logo">Elmira Iskakova</h2>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
       </nav>
-      <!-- navbar section ends -->
+    </header>
 
-      <!-- home section start -->
-      <section class="home" id="home">
-        <div class="max-width">
-          <div class="home-content">
-            <div class="text-1">Hello, my name is</div>
-            <div class="text-2">Elmira</div>
-            <div class="text-3">And I'm a <span>frontend developer</span></div>
-          </div>
-        </div>
+    <main>
+      <section class="hero">
+        <h1>Learning and Growing every day.</h1>
       </section>
-      <!-- home section end -->
 
-      <!-- about section start -->
-      <section class="about" id="about">
-        <div class="max-width">
-          <h2 class="title">About me</h2>
-          <div class="about-content">
-            <div class="column left">
-              <img src="images/computer.png" alt="computer icon" />
-            </div>
-            <div class="column right">
-              <p>
-                Hello there! My name is Elmira and I'm a self-taught frontend
-                developer who is passionate about web development. What thrills
-                me the most about development, is the never ending opportunity
-                to learn and grow. I find it incredibly rewarding being able to
-                build almost anything and unleash the creativity.
-              </p>
-              <a href="#">Download CV</a>
-            </div>
-          </div>
-        </div>
+      <section class="about">
+        <h2>Hi! I'm Elmira.</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam,
+          officiis?
+        </p>
       </section>
-      <!-- about section start -->
 
-      <!-- skills section start-->
       <section class="skills">
-        <div class="max-width">
-          <div>
-            <h2 class="title">My skills</h2>
-          </div>
-          <div class="container">
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/html5.png" alt="html5 logo" />
-                </div>
-                <h3>HTML 5</h3>
-              </div>
-            </div>
-
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/css3.png" alt="css3 logo" />
-                </div>
-                <h3>CSS 3</h3>
-              </div>
-            </div>
-
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/javascript.png" alt="javascript logo" />
-                </div>
-                <h3>JavaScript</h3>
-              </div>
-            </div>
-
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/python.png" alt="python logo" />
-                </div>
-                <h3>Python</h3>
-              </div>
-            </div>
-
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/bootstrap.png" alt="bootstrap logo" />
-                </div>
-                <h3>Bootstrap</h3>
-              </div>
-            </div>
-
-            <div class="skill-box">
-              <div class="skill-title">
-                <div>
-                  <img src="images/git.png" alt="git logo" />
-                </div>
-                <h3>Git</h3>
-              </div>
-            </div>
-          </div>
+        <h2>What I Use</h2>
+        <div class="icons">
+          <img src="images/html5.png" alt="html5 icon" />
+          <img src="images/css3.png" alt="css3 icon" />
+          <img src="images/javascript.png" alt="js icon" />
+          <img src="images/bootstrap.png" alt="bootstrap icon" />
+          <img src="images/python.png" alt="python icon" />
+          <img src="images/git.png" alt="git icon" />
         </div>
       </section>
-      <!-- skills section end-->
 
-      <!-- projects section start -->
       <section class="projects">
-        <h2 class="title">My latest projects</h2>
-        <div class="container">
-          <div class="panel active">
-            <h3>bla</h3>
-          </div>
-
-          <div class="panel">
-            <h3>bla</h3>
-          </div>
-
-          <div class="panel">
-            <h3>bla</h3>
-          </div>
+        <h2>My projects</h2>
+        <div class="proj1">
+          <a href="">
+            <button>Live preview</button>
+            <button>The code</button>
+          </a>
         </div>
+        <div class="proj2">
+          <a href="">
+            <button>Live preview</button>
+            <button>The code</button>
+          </a>
+        </div>
+        <div class="proj3">
+          <a href="">
+            <button>Live preview</button>
+            <button>The code</button>
+          </a>
+        </div>
+        <button>see more</button>
       </section>
-      <!-- projects section end -->
-    </div>
 
-    <script src="script.js"></script>
+      <section class="contact"></section>
+    </main>
+
+    <footer>
+      <div class="left">
+        <h4>Elmira Iskakova</h4>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Skills</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="right">
+        <a href=""></a>
+        <a href=""></a>
+        <p>&copy 2022 | Elmira Iskakova</p>
+      </div>
+    </footer>
   </body>
 </html>
