Third version - projects and about sections added

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <header>
-      <h2 class="logo">elmira</h2>
+      <h2 class="logo"><a href="#">portfolio.</a></h2>
 
       <button class="toggle" aria-expanded="false"></button>
       <nav>
         <ul id="navbar" class="navbar" data-visible="false">
           <li><a href="index.html">Home</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -27,14 +27,34 @@
 
     <main>
       <section id="hero">
-        <h1>Learning and Growing every day.</h1>
+        <h1>Learning <span>and Growing </span><span>every day.</span></h1>
+      </section>
+
+      <section id="projects">
+        <h2>My projects</h2>
+        <div class="proj proj1">
+          <button>Live preview</button>
+          <button>The code</button>
+        </div>
+        <div class="proj proj2">
+          <button>Live preview</button>
+          <button>The code</button>
+        </div>
+        <div class="proj proj3">
+          <button>Live preview</button>
+          <button>The code</button>
+        </div>
+        <button class="cta"><a href="">see more</a></button>
       </section>
 
       <section id="about">
+        <img src="images/about.jpg" alt="about image" />
         <h2>Hi! I'm Elmira.</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam,
-          officiis?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In,
+          possimus. Earum nam ipsam dicta suscipit corrupti, aut tempore modi
+          quibusdam quos similique. Corporis error, iusto aspernatur eius fuga
+          alias numquam!
         </p>
       </section>
 
@@ -48,29 +68,6 @@
           <img src="images/python.png" alt="python icon" />
           <img src="images/git.png" alt="git icon" />
         </div>
-      </section>
-
-      <section id="projects">
-        <h2>My projects</h2>
-        <div class="proj1">
-          <a href="">
-            <button>Live preview</button>
-            <button>The code</button>
-          </a>
-        </div>
-        <div class="proj2">
-          <a href="">
-            <button>Live preview</button>
-            <button>The code</button>
-          </a>
-        </div>
-        <div class="proj3">
-          <a href="">
-            <button>Live preview</button>
-            <button>The code</button>
-          </a>
-        </div>
-        <button>see more</button>
       </section>
 
       <section id="contact"></section>
