Third version - skills and contact sections added

--- a/index.html
+++ b/index.html
@@ -61,16 +61,71 @@
       <section id="skills">
         <h2>What I Use</h2>
         <div class="icons">
-          <img src="images/html5.png" alt="html5 icon" />
-          <img src="images/css3.png" alt="css3 icon" />
-          <img src="images/javascript.png" alt="js icon" />
-          <img src="images/bootstrap.png" alt="bootstrap icon" />
-          <img src="images/python.png" alt="python icon" />
-          <img src="images/git.png" alt="git icon" />
+          <div class="item">
+            <img src="images/html5.png" alt="html5 icon" />
+            <p>HTML5</p>
+          </div>
+
+          <div class="item">
+            <img src="images/css3.png" alt="css3 icon" />
+            <p>CSS3</p>
+          </div>
+
+          <div class="item">
+            <img src="images/javascript.png" alt="js icon" />
+            <p>Javascript</p>
+          </div>
+
+          <div class="item">
+            <img src="images/bootstrap.png" alt="bootstrap icon" />
+            <p>Bootstrap</p>
+          </div>
+
+          <div class="item">
+            <img src="images/python.png" alt="python icon" />
+            <p>Python</p>
+          </div>
+
+          <div class="item">
+            <img src="images/git.png" alt="git icon" />
+            <p>Git</p>
+          </div>
         </div>
       </section>
 
-      <section id="contact"></section>
+      <section id="contact">
+        <h2>Let's talk!</h2>
+
+        <div class="container">
+          <form action="">
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              id="fname"
+              name="firstname"
+              placeholder="Your name.."
+            />
+
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              id="lname"
+              name="lastname"
+              placeholder="Your last name.."
+            />
+
+            <label for="subject">Message</label>
+            <textarea
+              id="subject"
+              name="subject"
+              placeholder="Write something.."
+              style="height: 200px"
+            ></textarea>
+
+            <input class="cta" type="submit" value="Send" />
+          </form>
+        </div>
+      </section>
     </main>
 
     <footer>
