--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
       </section>
 
       <section id="projects">
-        <h2>My projects</h2>
+        <div class="title">
+          <h2>My projects</h2>
+          <button class="cta"><a href="">see more</a></button>
+        </div>
+
         <div class="proj proj1">
           <button>Live preview</button>
           <button>The code</button>
@@ -44,7 +48,6 @@
           <button>Live preview</button>
           <button>The code</button>
         </div>
-        <button class="cta"><a href="">see more</a></button>
       </section>
 
       <section id="about">
