--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   </head>
   <body>
     <header class="navbar">
-      <div id="toggle"></div>
+      <div class="title">
+        <!-- <h1>portfolio.</h1> -->
+        <div id="toggle"></div>
+      </div>
+
       <div id="sidebar">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -25,7 +29,7 @@
 
     <main>
       <section id="hero">
-        <h1>Learning <span>every day.</span></h1>
+        <h1>Elmira Iskakova<span>Portfolio</span></h1>
       </section>
 
       <section id="projects">
