Contact and skills updated

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   </head>
   <body>
     <header class="navbar">
-      <div class="title">
-        <!-- <h1>portfolio.</h1> -->
-        <div id="toggle"></div>
-      </div>
+      <div id="toggle"></div>
 
       <div id="sidebar">
         <ul>
@@ -29,7 +26,7 @@
 
     <main>
       <section id="hero">
-        <h1>Elmira Iskakova<span>Portfolio</span></h1>
+        <h1>Elmira Iskakova Portfolio</h1>
       </section>
 
       <section id="projects">
@@ -38,28 +35,33 @@
           <button class="cta"><a href="">see more</a></button>
         </div>
 
-        <div class="proj proj1">
-          <button>Live preview</button>
-          <button>The code</button>
-        </div>
-        <div class="proj proj2">
-          <button>Live preview</button>
-          <button>The code</button>
-        </div>
-        <div class="proj proj3">
-          <button>Live preview</button>
-          <button>The code</button>
+        <div class="proj-container">
+          <div class="proj proj1">
+            <button>Live preview</button>
+            <button>The code</button>
+          </div>
+          <div class="proj proj2">
+            <button>Live preview</button>
+            <button>The code</button>
+          </div>
+          <div class="proj proj3">
+            <button>Live preview</button>
+            <button>The code</button>
+          </div>
         </div>
       </section>
 
       <section id="about">
         <img src="images/about.jpg" alt="about image" />
-        <h2>Hi! I'm Elmira.</h2>
-        <p>
-          Hello there! My name is Elmira and I'm a frontend developer (to be
-          full-stack one day) who is extremely passionate about web development.
-          I always actively seek new opportunities to learn and grow.
-        </p>
+
+        <div class="text">
+          <h2>Hi! I'm Elmira.</h2>
+          <p>
+            I'm a frontend developer (to be full-stack one day) who is extremely
+            passionate about web development. I always actively seek new
+            opportunities to learn and grow.
+          </p>
+        </div>
       </section>
 
       <section id="skills">
