Third version complete

--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
             <button>The code</button>
           </div>
         </div>
+
+        <div class="text-container">
+          <div class="text">
+            <h3>Project</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+              autem!
+            </p>
+          </div>
+          <div class="text">
+            <h3>Project</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+              autem!
+            </p>
+          </div>
+          <div class="text">
+            <h3>Project</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+              autem!
+            </p>
+          </div>
+        </div>
       </section>
 
       <section id="about">
