Scroll effect added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main-container">
       <section id="hero">
         <h1>Elmira Iskakova Portfolio</h1>
       </section>
