--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main class="main-container">
+    <main>
       <section id="hero">
         <h1>Elmira Iskakova Portfolio</h1>
       </section>
@@ -32,44 +32,68 @@
       <section id="projects">
         <div class="title">
           <h2>My projects</h2>
-          <button class="cta"><a href="">see more</a></button>
+          <button class="cta">
+            <a href="https://github.com/Mira-Iskakova" target="_blank"
+              >see more</a
+            >
+          </button>
         </div>
 
         <div class="proj-container">
           <div class="proj proj1">
-            <button>Live preview</button>
-            <button>The code</button>
+            <a
+              href="https://mira-iskakova.github.io/Landing-Page-Bootstrap/"
+              target="_blank"
+              ><button>Live preview</button></a
+            >
+            <a
+              href="https://github.com/Mira-Iskakova/Landing-Page-Bootstrap"
+              target="_blank"
+              ><button>The code</button></a
+            >
           </div>
           <div class="proj proj2">
-            <button>Live preview</button>
-            <button>The code</button>
+            <a href="https://github.com/Mira-Iskakova/Pong-Game" target="_blank"
+              ><button>Live preview</button></a
+            >
+            <a
+              href="https://github.com/Mira-Iskakova/Pong-Game/blob/main/pong.py"
+              target="_blank"
+              ><button>The code</button></a
+            >
           </div>
           <div class="proj proj3">
-            <button>Live preview</button>
-            <button>The code</button>
+            <a
+              href="https://mira-iskakova.github.io/Calculator/"
+              target="_blank"
+              ><button>Live preview</button></a
+            >
+            <a
+              href="https://github.com/Mira-Iskakova/Calculator"
+              target="_blank"
+              ><button>The code</button></a
+            >
           </div>
-        </div>
 
-        <div class="text-container">
           <div class="text">
-            <h3>Project</h3>
+            <h3>Product Landing Page</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
-              autem!
+              This is a multi-purpose landing page built by using HTML5, CSS3,
+              Javascript, and Bootstrap.
             </p>
           </div>
           <div class="text">
-            <h3>Project</h3>
+            <h3>Pong Game</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
-              autem!
+              A simple classic pong game built with Python and it's Turtle
+              module.
             </p>
           </div>
           <div class="text">
-            <h3>Project</h3>
+            <h3>Calculator</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
-              autem!
+              This project is a calculator that was created using HTML5, CSS3,
+              and JavaScript.
             </p>
           </div>
         </div>
@@ -160,23 +184,23 @@
 
     <footer>
       <div class="left">
-        <h4>portfolio.</h4>
+        <h4><a href="index.html">portfolio.</a></h4>
 
         <ul class="left-links">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
 
       <div class="right">
         <div class="right-links">
-          <a href=""
+          <a href="https://www.linkedin.com/in/elmira-iskakova/" target="_blank"
             ><img class="socials" src="images/linkedin.svg" alt="LinkedIn logo"
           /></a>
-          <a href=""
+          <a href="https://github.com/Mira-Iskakova" target="_blank"
             ><img class="socials" src="images/github.svg" alt="Github logo"
           /></a>
         </div>
