Contact form update

--- a/index.html
+++ b/index.html
@@ -102,12 +102,16 @@
       <section id="about">
         <img src="images/about.jpg" alt="about image" />
 
-        <div class="text">
+        <div class="about-text">
           <h2>Hi! I'm Elmira.</h2>
           <p>
-            I'm a frontend developer (to be full-stack one day) who is extremely
-            passionate about web development. I always actively seek new
-            opportunities to learn and grow.
+            While working as a business development consultant in early 2020, I
+            was introduced to programming by a close friend. I've always been
+            curious about software development but after taking a few
+            freeCodeCamp courses and creating a product landing page from
+            scratch, I was oficially hooked. Not only was it intellectually
+            stimulating but it was the first time I found myself doing something
+            I loved.
           </p>
         </div>
       </section>
@@ -166,6 +170,15 @@
               id="lname"
               name="lastname"
               placeholder="Your last name.."
+            />
+
+            <label for="email">Email address</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Your email address.."
+              required
             />
 
             <label for="subject">Message</label>
