--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
         <h2>Let's talk!</h2>
 
         <div>
-          <form action="">
+          <form
+            action="https://formsubmit.co/miraiskakova19@gmail.com"
+            method="POST"
+          >
             <label for="fname">First Name</label>
             <input
               type="text"
